:star: HUGE CLIENT JS REDESIGN :star: - I actually know what I'm doing - All modularized (is that a word?) - 8/8 m8

--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -85,7 +85,7 @@ aside#sidebar
     b On Mumble Now
       small.text-muted.right 0 users
     #mumble-list
-    a(target="_blank", href="http://wiki.mumble.info/wiki/Main_Page") Install
+    a(target="_blank", href="http://wiki.mumble.info/wiki/Main_Page#Download_Mumble") Install
     b  | 
     a(href="mumble://"+currentUser.username+":regis@www.getontrac.info/School?version=1.2.0") Join
   
