--- a/views/thoughts/index.jade
+++ b/views/thoughts/index.jade
@@ -8,8 +8,13 @@ block content
       br
       #stats.larger
         b There's gonna be some nice helpful stuff here one day I swear.
-    
+
     .row
       .col-xs-12
-        if recent.length == 0
+        if thoughts.length == 0
           b No thoughts recorded in the past week!
+        else
+          for t in thoughts
+            div
+              b= moment(t.date).format("dddd [the] D")
+              p= t.body
