--- a/views/home/homepage.jade
+++ b/views/home/homepage.jade
@@ -22,6 +22,9 @@ block content
           a.btn.btn-default(href="http://moodle.regis.org/my/", target="_blank") Moodle
           a.btn.btn-default(href="https://owa.regis.org/owa/", target="_blank") Email
           a.btn.btn-default(href="https://myfiles.regis.org/", target="_blank") MyFiles
+          a.btn.btn-default.fa.fa-github(target="_blank", title="View the public source code behind this project, maintained solely by me.", href="https://github.com/Aedificem/ontrac")
+          a.btn.btn-default.fa.fa-bug(target="_blank", title="View the recorded issues that I'm working on for the site.", href="https://waffle.io/Aedificem/ontrac/join")
+          a.btn.btn-default.fa.fa-tasks(target="_blank", title="View the features that are being worked on and that are coming soon.", href="https://trello.com/b/b9JwXnPH/ontrac")
     if todaysInfo
       #classInfo
         p.larger Loading class info...
