--- a/views/home/homepage.jade
+++ b/views/home/homepage.jade
@@ -13,6 +13,10 @@ block content
       .col-xs-12
         if todaysInfo
           span.visible-xs Today is a #[b= todaysInfo.scheduleDay+"-Day"].
+      .col-xs-12
+        br
+        b #[i.fa.fa-github] LATEST UPDATE:&nbsp;
+        span#github Fetching...
       .clearfix
     
     .row.center
