User list improvement

--- a/views/users/list.jade
+++ b/views/users/list.jade
@@ -6,6 +6,7 @@ block content
 
     .page-header
       h1(title="The cool guys.") Registered Users #[small [Alpha Testers]]
+        small.right #{registered.length} total
         
     .row
       .col-xs-12
