--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -2,6 +2,7 @@ extends /layout
 
 block content
   .container
+    include /info
     .jumbotron.no-margin
       h1.no-margin Welcome, Mighty Admin
     
