USER BUG/SUGGESTION BOUNTIES

--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -6,6 +6,7 @@ block content
     .jumbotron.no-margin
       h1.no-margin Welcome, Mighty Admin
     
+    include bounty
     
     .col-xs-12
       hr
