--- a/views/admin/bounty.jade
+++ b/views/admin/bounty.jade
@@ -4,7 +4,7 @@
     h3 Bug/Suggestion Rewards 
     .form-group
       label(for="username") Username
-      input.form-control(type="text", name="username", required=true)
+      input.form-control(type="text", name="username", value=rewarding, required=true)
     
     .form-group
       label(for="reward") Point Reward (only if not first time)
