--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -88,6 +88,9 @@ header
                 span.badge(style="margin: 0;", title="Your points!")= currentUser.points
             li.hidden-xs
               a(href="/users/"+currentUser.username+"/schedule", title="View your class schedule.", style="padding-right: 5px;padding-left: 2px;").fa.fa-calendar
+            if helpPage
+              li.hidden-xs
+                a(href="#", data-toggle="modal", data-target="#help-modal", title="Get help on the current page.", style="padding-right: 5px;padding-left: 2px;").fa.fa-info-circle
             li.hidden-xs
               a(href="#", data-toggle="modal", data-target="#feedback-modal", title="Offer feedback.", style="padding-right: 5px;padding-left: 2px;").fa.fa-comment
             li.hidden-xs
