--- a/views/home/homepage.jade
+++ b/views/home/homepage.jade
@@ -37,12 +37,12 @@ block content
     .row
       if todaysInfo
         .col-xs-12.col-sm-6.col-md-4
-          .panel.panel-primary#thoughtbox
+          .panel.panel-warning#thoughtbox
             .panel-heading Daily Thoughts
               a.undecorated.fa.fa-list.right(href="/thoughts")
             form.form-inline(role="form", action="/thoughts", method="POST")
               textarea.form-control(rows="2", name="newThoughtsBody")= dailythought
-              button.btn.btn-primary Update
+              button.btn.btn-warning Update
       include work-boxes
       .col-xs-12.col-md-3.text-center
         .visible-sm.visible-md
