--- a/views/home/work-boxes.jade
+++ b/views/home/work-boxes.jade
@@ -1,30 +1,32 @@
-.col-xs-12.col-sm-6.col-lg-4#due-today
-  .panel.panel-primary
-    a.undecorated(href="/work/today")
-      .panel-heading Today's Work
-        a.fa.fa-list.right.undecorated(href="/work")
-    .panel-body
-      .col-xs-12.col-md-3.text-center.hidden-xs.hidden-sm.box-picture(style="padding: 0;")
-        a(href="/work/today")
-          img(style="width: 5em;", src="https://cdn3.iconfinder.com/data/icons/education/512/Booking-512.png")
-      .col-xs-12.col-md-9
-        .content
-          b.text-muted Loading work...
-        .progress(style="margin-top: 10px", data-toggle="tooltip", title="0% done!")
-          .progress-bar(role='progressbar', aria-valuemin='0', aria-valuemax='100', style='width: 0%; background-color: #2780e3;')
+if todaysInfo && helpers.nowIs("before", "2:50 PM")
+  .col-xs-12.col-sm-6.col-lg-4#due-today
+    .panel.panel-primary
+      a.undecorated(href="/work/today")
+        .panel-heading Today's Work
+          a.fa.fa-list.right.undecorated(href="/work")
+      .panel-body
+        .col-xs-12.col-md-3.text-center.hidden-xs.hidden-sm.box-picture(style="padding: 0;")
+          a(href="/work/today")
+            img(style="width: 5em;", src="https://cdn3.iconfinder.com/data/icons/education/512/Booking-512.png")
+        .col-xs-12.col-md-9
+          .content
+            b.text-muted Loading work...
+          .progress(style="margin-top: 10px", data-toggle="tooltip", title="0% done!")
+            .progress-bar(role='progressbar', aria-valuemin='0', aria-valuemax='100', style='width: 0%; background-color: #2780e3;')
 
 
-.col-xs-12.col-sm-6.col-lg-4#due-closest(data-closest=nextCD)
-  .panel.panel-info
-    a.undecorated(href="/work/closest")
-      .panel-heading Upcoming Work
-        a.fa.fa-list.right.undecorated(href="/work")
-    .panel-body
-      .col-xs-12.col-md-3.text-center.hidden-xs.hidden-sm.box-picture(style="padding: 0;")
-        a(href="/work/closest")
-          img(style="width: 5em;", src="https://cdn3.iconfinder.com/data/icons/education/512/Booking-512.png")
-      .col-xs-12.col-md-9
-        .content
-          b.text-muted Loading work...
-        .progress(style="margin-top: 10px", data-toggle="tooltip", title="0% done!")
-          .progress-bar(role='progressbar', aria-valuemin='0', aria-valuemax='100', style='width: 0%; background-color: #9954bb;')
+if helpers.nowIs("after", "1:00 PM") && nextCD
+  .col-xs-12.col-sm-6.col-lg-4#due-closest(data-closest=nextCD)
+    .panel.panel-info
+      a.undecorated(href="/work/closest")
+        .panel-heading Upcoming Work
+          a.fa.fa-list.right.undecorated(href="/work")
+      .panel-body
+        .col-xs-12.col-md-3.text-center.hidden-xs.hidden-sm.box-picture(style="padding: 0;")
+          a(href="/work/closest")
+            img(style="width: 5em;", src="https://cdn3.iconfinder.com/data/icons/education/512/Booking-512.png")
+        .col-xs-12.col-md-9
+          .content
+            b.text-muted Loading work...
+          .progress(style="margin-top: 10px", data-toggle="tooltip", title="0% done!")
+            .progress-bar(role='progressbar', aria-valuemin='0', aria-valuemax='100', style='width: 0%; background-color: #9954bb;')
