--- a/views/parts/feedback-modal.jade
+++ b/views/parts/feedback-modal.jade
@@ -16,7 +16,7 @@
                     option Problem
                     option Idea
                 .form-group
-                  label.control-label(for='feedback-text') Message: (totally anonymous)
+                  label.control-label(for='feedback-text') Message:
                   textarea#feedback-text.form-control(required=true)
       .modal-footer
         button.btn.btn-default(type='button', data-dismiss='modal') Close
