--- a/views/home/homepage.jade
+++ b/views/home/homepage.jade
@@ -30,19 +30,18 @@ block content
           a.btn.btn-default.fa.fa-github(target="_blank", title="View the public source code behind this project, maintained solely by me.", href="https://github.com/Aedificem/ontrac")
           a.btn.btn-default.fa.fa-bug(target="_blank", title="View the recorded issues that I'm working on for the site.", href="https://waffle.io/Aedificem/ontrac/join")
           a.btn.btn-default.fa.fa-tasks(target="_blank", title="View the features that are being worked on and that are coming soon.", href="https://trello.com/b/b9JwXnPH/ontrac")
-    if todaysInfo
+    if todaysInfo && nowIs("between", "8:50 AM", "2:50 PM")
       #classInfo
         p.larger Loading class info...
     hr
     .row
-      if todaysInfo
-        .col-xs-12.col-sm-6.col-md-4
-          .panel.panel-warning#thoughtbox
-            .panel-heading Daily Thoughts
-              a.undecorated.fa.fa-list.right(href="/thoughts")
-            form.form-inline(role="form", action="/thoughts", method="POST")
-              textarea.form-control(rows="2", name="newThoughtsBody")= dailythought
-              button.btn.btn-warning Update
+      .col-xs-12.col-sm-6.col-md-4
+        .panel.panel-warning#thoughtbox
+          .panel-heading Daily Thoughts
+            a.undecorated.fa.fa-list.right(href="/thoughts")
+          form.form-inline(role="form", action="/thoughts/add", method="POST")
+            textarea.form-control(rows="2", name="newThoughtsBody")= dailythought
+            button.btn.btn-warning Update
       include work-boxes
       .col-xs-12.col-md-3.text-center
         .visible-sm.visible-md
